--- a/introducao_ao_vuejs2/index.html
+++ b/introducao_ao_vuejs2/index.html
@@ -15,6 +15,9 @@
     <p v-for="registro in registros">{{registro.titulo}}</p>
     <button v-if="!clicou" v-on:click="usuarioClicou">Salvar</button>
     <button v-if="clicou" v-on:click="usuarioClicou">Aguarde...</button>
+    <br><br>
+    <input type="text" v-model="usuario.nome">
+    <p>nome: {{usuario.nome}}</p>
   </div>
   
   <script type="text/javascript">
@@ -32,7 +35,8 @@
           {titulo:'registro4'},
           {titulo:'registro5'},
         ],
-        clicou:false
+        clicou:false,
+        usuario:{nome:""}
       },
       methods: {
        usuarioClicou: function() {
