--- a/introducao_ao_vuejs2/index.html
+++ b/introducao_ao_vuejs2/index.html
@@ -9,40 +9,19 @@
 </head>
 <body>
   <div id="app">
-    {{ msg }}
-    <p v-bind:title="titulo">teste com title</p>
-    <p v-if="condicao">teste com if</p>
-    <p v-for="registro in registros">{{registro.titulo}}</p>
-    <button v-if="!clicou" v-on:click="usuarioClicou">Salvar</button>
-    <button v-if="clicou" v-on:click="usuarioClicou">Aguarde...</button>
-    <br><br>
-    <input type="text" v-model="usuario.nome">
-    <p>nome: {{usuario.nome}}</p>
+    <bia-titulo></bia-titulo>
   </div>
   
+  
   <script type="text/javascript">
+
+  Vue.component('bia-titulo', {
+    template:'<h2>Componente de titulo</h2>'
+  });
     
     var app = new Vue({
       el:"#app",
-      data:{
-        msg:'Iniciando com Vue JS',
-        titulo:"teste com v-bind",
-        condicao: true,
-        registros: [
-          {titulo:'registro1'},
-          {titulo:'registro2'},
-          {titulo:'registro3'},
-          {titulo:'registro4'},
-          {titulo:'registro5'},
-        ],
-        clicou:false,
-        usuario:{nome:""}
-      },
-      methods: {
-       usuarioClicou: function() {
-         this.clicou = !this.clicou;
-       } 
-      }
+      
 
     }); 
 
