--- a/introducao_ao_vuejs2/index.html
+++ b/introducao_ao_vuejs2/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <div id="app">
-    <bia-titulo titulo="esse é o titulo"></bia-titulo>
+    <bia-titulo v-bind:titulo="meuTitulo"></bia-titulo>
+    <input type="text" v-model="meuTitulo">
   </div>
   
   
@@ -22,7 +23,9 @@
     
     var app = new Vue({
       el:"#app",
-      
+      data: {
+        meuTitulo:'esse é o titulo'
+      }
 
     }); 
 
