Exemplos com v-once  e v-html

--- a/introducao_ao_vuejs2/index.html
+++ b/introducao_ao_vuejs2/index.html
@@ -12,6 +12,10 @@
     <bia-titulo v-bind:titulo="meuTitulo"></bia-titulo>
     <input type="text" v-model="meuTitulo">
     <bia-tabela v-bind:titulos="['Título','Descrição', 'Link']" v-bind:registros="registros"></bia-tabela>
+
+    <p v-once>{{meuTitulo}}</p>
+    <p v-html="html"></p>
+
   </div>
   
   <script type="text/javascript">
@@ -46,7 +50,8 @@
           {titulo:'Titulo 1', descricao:'descricao 1', link: 'link 1'},
           {titulo:'Titulo 2', descricao:'descricao 2', link: 'link 2'},
           {titulo:'Titulo 3', descricao:'descricao 3', link: 'link 3'}
-        ]
+        ],
+        html:'<a href="#">Esse é um link</a>'
       }
 
     }); 
