--- a/introducao_ao_vuejs2/index.html
+++ b/introducao_ao_vuejs2/index.html
@@ -18,6 +18,16 @@
 
     <p>{{ 23.28423424 | TrataValor }}</p>
 
+    <ul>
+      <li v-for="registro in registros">
+        {{registro.titulo}} - {{registro.descricao}} - {{registro.link}} - {{registro.valor | TrataValor}}
+      </li>
+    </ul>
+    <p>Total (methods): {{totalValorMetodo() | TrataValor}}</p>
+    <p>Total (computed): {{totalValorComputed | TrataValor}}</p>
+    <p>contaMethods: {{contaMethods}}</p>
+    <p>contaComputed: {{contaComputed}}</p>
+
   </div>
   
   <script type="text/javascript">
@@ -49,15 +59,37 @@
       data: {
         meuTitulo:'esse é o titulo',
         registros: [
-          {titulo:'Titulo 1', descricao:'descricao 1', link: 'link 1'},
-          {titulo:'Titulo 2', descricao:'descricao 2', link: 'link 2'},
-          {titulo:'Titulo 3', descricao:'descricao 3', link: 'link 3'}
+          {titulo:'Titulo 1', descricao:'descricao 1', link: 'link 1', valor:23.5454},
+          {titulo:'Titulo 2', descricao:'descricao 2', link: 'link 2', valor:23.323},
+          {titulo:'Titulo 3', descricao:'descricao 3', link: 'link 3', valor:23}
         ],
-        html:'<a href="#">Esse é um link</a>'
+        html:'<a href="#">Esse é um link</a>',
+        contaMethods:0,
+        contaComputed:0
       },
       filters:{
         TrataValor: function(valor){
           return ('R$'+(valor).toFixed(2)).replace('.',',');
+        }
+      },
+      methods: {
+        totalValorMetodo: function() {
+          this.contaMethods++;
+          var total = 0;
+          for(item of this.registros) {
+            total += item.valor;
+          }
+          return total;
+        }
+      },
+      computed:{
+        totalValorComputed: function() {
+          this.contaComputed++;
+          var total = 0;
+          for(item of this.registros) {
+            total += item.valor;
+          }
+          return total;
         }
       }
 
