--- a/introducao_ao_vuejs2/index.html
+++ b/introducao_ao_vuejs2/index.html
@@ -26,6 +26,19 @@
     <input type="checkbox" id="aceitaTermos" v-model="termos">
     <label for="aceitaTermos">{{termos}}</label>
 
+    <p>Multiple Checkboxes: {{notificacoes}} </p>
+    <p>
+      <input type="checkbox" id="receberEmail" value="email"    v-model="notificacoes">
+      <label for="receberEmail">Receber e-mail</label>
+      <input type="checkbox" id="receberSMS" value="sms"    v-model="notificacoes">
+      <label for="receberSMS">Receber SMS</label>
+      <input type="checkbox" id="receberTel" value="tel"    v-model="notificacoes">
+      <label for="receberTel">Receber Licação</label>
+    </p>
+
+
+
+
   </div>
   
   <script type="text/javascript">
@@ -40,7 +53,8 @@
       data:{
         texto:'',
         textarea:'',
-        termos:false
+        termos:false,
+        notificacoes:[]
       }
     });
 
