--- a/introducao_ao_vuejs2/index.html
+++ b/introducao_ao_vuejs2/index.html
@@ -35,7 +35,13 @@
       <input type="checkbox" id="receberTel" value="tel"    v-model="notificacoes">
       <label for="receberTel">Receber Licação</label>
     </p>
-
+    <p>Radio: {{sexo}}</p>
+    <p>
+      <input type="radio" id="masculino" value="M" v-model="sexo">
+      <label for="masculino">Masculino</label>
+      <input type="radio" id="feminino" value="F" v-model="sexo">
+      <label for="feminino">Feminino</label>
+    </p>
 
 
 
@@ -54,7 +60,8 @@
         texto:'',
         textarea:'',
         termos:false,
-        notificacoes:[]
+        notificacoes:[],
+        sexo:'F'
       }
     });
 
