--- a/introducao_ao_vuejs2/index.html
+++ b/introducao_ao_vuejs2/index.html
@@ -60,8 +60,10 @@
         <option>Vermelho</option>
       </select>
     </p>
-
-
+    <p>Lazy (atraso proposital): {{busca}}</p>
+    <p>
+      <input type="text" v-model.lazy="busca">
+    </p>
 
   </div>
   
@@ -82,6 +84,7 @@
         sexo:'F',
         ano:null,
         cores:[],
+        busca:'',
       }
     });
 
